<resources>
    <string name="app_name">MediTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nume, Prenume</string>
    <string name="nav_header_subtitle">persoana@spital.ro</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">MediTracker</string>
    <string name="welcome_bineativenit">Bine ati venit!</string>
    <string name="welcome_angajat">Angajat</string>
    <string name="welcome_pacient">Pacient</string>
    <string name="nav_logout">Iesi din cont</string>
    <string name="nav_feedback">Trimite feedback</string>
    <string name="nav_pacients">Pacienti</string>
    <string name="nav_sectie">Sectie</string>
    <string name="nav_setari">Setari</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_adaugare_angajat">Adaugare angajat</string>

    <string-array name="spn_sex">
        <item>F</item>
        <item>M</item>
        <item>Altele</item>
    </string-array>

    <string-array name="spn_rol">
        <item>Medic</item>
        <item>Asistent</item>
        <item>UPU</item>
    </string-array>

    <string-array name="spn_sectie">
        <item>Internari</item>
        <item>Analize</item>
        <item>Cardiologie</item>
        <item>Chirurgie Generala</item>
        <item>Dermatologie</item>
        <item>Endocrionologie</item>
        <item>Ginecologie</item>
        <item>Interne</item>
        <item>Imagistica</item>
        <item>Infectioase</item>
        <item>Neurologie</item>
        <item>Neonatologie</item>
        <item>Ortopedie</item>
        <item>Oftalmologie</item>
        <item>Oncologie</item>
        <item>Pediatrie</item>
        <item>Pneumologie</item>
        <item>Psihiatrie</item>
        <item>Radiologie</item>
        <item>Recuperare</item>


    </string-array>

</resources>
